--- a/package.json
+++ b/package.json
@@ -37,15 +37,15 @@
     "moment": "2.24.0",
     "numeral": "^2.0.6",
     "prop-types": "15.7.2",
-    "react": "16.8.3",
-    "react-native": "0.59.10",
+    "react": "17.0.2",
+    "react-native": "0.66.1",
     "react-native-action-sheet": "2.2.0",
     "react-native-android-sms-listener": "0.7.0",
     "react-native-collapsible": "1.4.0",
     "react-native-device-info": "2.1.2",
     "react-native-elements": "1.1.0",
     "react-native-firebase": "5.2.3",
-    "react-native-gesture-handler": "1.1.0",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-global-font": "1.0.2",
     "react-native-keyboard-manager": "4.0.13-10",
     "react-native-localize": "1.1.1",
@@ -90,6 +90,7 @@
     "babel-jest": "24.8.0",
     "babel-plugin-transform-remove-console": "6.9.4",
     "jest": "24.8.0",
+    "jetifier": "^2.0.0",
     "metro-react-native-babel-preset": "0.54.1",
     "prettier": "^1.18.2",
     "react-test-renderer": "16.8.6",
